<resources>
    <string name="app_name">KeyakiReader</string>
    <string name="action_settings">Settings</string>

    <string name="blogTitleView">ブログタイトル</string>
    <string name="blogWriterView">ブログ作成者</string>
    <string name="blogUpdateTimeView">ブログ更新時間</string>

    <string name="newsTitleView">ニュースタイトル</string>
    <string name="newsCategoryView">カテゴリー</string>
    <string name="newsUpdateTimeView">ニュース更新日時</string>
</resources>
