<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="104dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/blogImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription=""
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/keyaki" />

    <TextView
        android:id="@+id/blogTitleView"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/blogImageView"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/blogImageView"
        android:gravity="center"
        android:maxLines="4"
        android:text="@string/blogTitleView"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:textColor="@color/keyakiDarkGreen"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/blogWriterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:maxLines="1"
        android:text="@string/blogWriterView"
        android:textAlignment="viewStart"
        android:textColor="@color/keyakiPurple"
        android:layout_alignBottom="@+id/blogImageView"
        android:layout_alignStart="@+id/blogTitleView" />

    <TextView
        android:id="@+id/blogUpdateTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/blogWriterView"
        android:layout_alignBottom="@+id/blogWriterView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        android:text="@string/blogUpdateTimeView"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

</RelativeLayout>
